--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -68,6 +68,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="catalogoDropdown">
                                 <li><a class="dropdown-item" href="@Url.Action("AdministrarCategorias","Catalogo")">Administrar Categorias</a></li>
+                                    <li><a class="dropdown-item" href="@Url.Action("AdministrarCupones","Catalogo")">Administrar Cupones</a></li>
                                 <li><a class="dropdown-item" href="@Url.Action("AdministrarPlatos","Catalogo")">Administrar Platos</a></li>
                         </ul>
                     </li>
