--- a/Views/Admin/AdministrarEmpleados.cshtml
+++ b/Views/Admin/AdministrarEmpleados.cshtml
@@ -5,7 +5,7 @@
 <h1 class="titulo-tabla">Empleados</h1>
 
 <!-- Tabla de Empleados -->
-<table id="employeeTable">
+    <table id="tabla">
     <thead>
         <tr>
             <th>ID</th>
