--- a/Views/Admin/AdministrarRoles.cshtml
+++ b/Views/Admin/AdministrarRoles.cshtml
@@ -9,7 +9,7 @@
 <h1 class="titulo-tabla"> Roles</h1>
 
 <!-- Tabla de Roles -->
-<table>
+<table id="tabla">
     <thead>
         <tr>
             <th>ID</th>
