--- a/Views/Reporte/AdministracionReportes.cshtml
+++ b/Views/Reporte/AdministracionReportes.cshtml
@@ -32,7 +32,7 @@
 <!-- Tabla de Reportes -->
 <h1 class="titulo-tabla">Administración de Reportes</h1>
 
-<table>
+<table id="tabla">
     <thead>
         <tr>
             <th>ID</th>
